# ETHOS-AEGIS-SDK

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SECURITY_LOG.md  adapters.py  adjudicate.test.js  client.go  client.py  client_test.go  conftest.py  docker-compose.yml  genesis.py  go.mod  guard.rs  ig_formatter.py  index.d.ts  index.js  index.mjs  integration.rs  lib.rs  package.json  pyproject.toml  requirements.txt  sentinel_ai.py  server.py  test_agent.py  test_sdk_client.py  test_server.py
.github/workflows/: anthropic_adapter.py  base_adapter.py  codeql.yml  gemini_adapter.py  generic_adapter.py  mistral_adapter.py  openai_adapter.py
