# ── pyproject.toml — Ethos Aegis package configuration ───────────────────────
# PEP 517/518/621 compliant. Used by pip, build, pytest, ruff, and mypy.

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "ethos-aegis"
version         = "1.0.0"
description     = "Sovereign Integrity Mesh — living, adaptive AI immune architecture"
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "MIT" }
authors         = [{ name = "The Ethos Aegis Project" }]
keywords        = ["ai-safety", "prompt-injection", "llm-security", "adversarial-robustness"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

# Zero runtime dependencies — pure Python stdlib
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "pytest-xdist>=3.3", "ruff>=0.4", "mypy>=1.8"]
fuzz = ["hypothesis>=6.100"]
all = ["ethos-aegis[dev,fuzz]"]

[project.scripts]
aegis-demo = "scripts.demo:main"

[project.urls]
Homepage    = "https://github.com/ethos-aegis/ethos-aegis"
Issues      = "https://github.com/ethos-aegis/ethos-aegis/issues"
Changelog   = "https://github.com/ethos-aegis/ethos-aegis/releases"


# ── Tool configuration ────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths   = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts     = "--tb=short -q"
log_level   = "WARNING"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",    # line too long — handled by formatter
    "B008",    # function calls in default arguments (common in dataclasses)
    "SIM108",  # ternary operator — sometimes less readable
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]     # assert is fine in tests

[tool.mypy]
python_version          = "3.10"
ignore_missing_imports  = true
no_strict_optional      = true
warn_unused_ignores     = true
warn_redundant_casts    = true
