[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "ethos-aegis-sdk"
version     = "1.0.0"
description = "pip-installable Python client for the Ethos Aegis Sovereign Integrity Mesh"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.10"
keywords    = ["ai-safety", "llm-security", "prompt-injection", "ethos-aegis"]

dependencies = []   # core has zero runtime dependencies

[project.optional-dependencies]
openai    = ["openai>=1.0"]
anthropic = ["anthropic>=0.25"]
mistral   = ["mistralai>=1.0"]
gemini    = ["google-generativeai>=0.7"]
vertex    = ["google-cloud-aiplatform>=1.50"]
dev       = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.9"]
all       = ["openai>=1.0", "anthropic>=0.25", "mistralai>=1.0", "google-generativeai>=0.7"]

[project.urls]
Repository = "https://github.com/ethos-aegis/ethos-aegis"
Documentation = "https://github.com/ethos-aegis/ethos-aegis/tree/main/sdk/python"

[tool.setuptools.packages.find]
where = ["."]
include = ["ethos_aegis_sdk*"]
